--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             </div>
             <i class="fas fa-trash-alt trashIcon icon"></i>
           </li>
+          <li class="card">
+            <div>
+              <i class="far fa-check-square icon"></i>
+              <span class="task">Curso de JavaScript</span>
+            </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
         </ul>
       </div>
     </main>
