--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO App</title>
     <link rel="icon" type="image/png" href="./assets/rocket.svg" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis&family=Open+Sans&family=Parisienne&display=swap"
       rel="stylesheet"
@@ -29,8 +29,9 @@
               placeholder="Nombre de la tarea"
               class="inputForm"
               autocomplete="off"
+              data-from-input
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-from-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
@@ -53,5 +54,6 @@
         </ul>
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
